fix the display problem occur on ios devices

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -109,7 +109,7 @@ header {
 		h1 {
 			color: white;
 			display: block;
-			width: 60%;
+			width: 100%;
 			font-size: 3em;
 			font-weight: bold;
 			margin-bottom: 10px;
